// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render nothing 1`] = `
RenderContext {
  "0": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Grid should render with 5 column 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "column": 5,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "ind": 1,
          "key": "img",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "img",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "img",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 2,
          "key": "notice",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "notice",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "notice",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 3,
          "key": "arrow-right",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-right",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-right",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 4,
          "key": "arrow-left",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-left",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-left",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 5,
          "key": "check",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "check",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "check",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 6,
          "key": "wrong",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "wrong",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "wrong",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 7,
          "key": "more",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "more",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "more",
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Grid should render with gutter 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "gutter": 20,
      "square": false,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "ind": 1,
          "key": "img",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "img",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "img",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 2,
          "key": "notice",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "notice",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "notice",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 3,
          "key": "arrow-right",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-right",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-right",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 4,
          "key": "arrow-left",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-left",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-left",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 5,
          "key": "check",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "check",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "check",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 6,
          "key": "wrong",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "wrong",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "wrong",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 7,
          "key": "more",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "more",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "more",
        "nodeName": [Function],
      },
      VNode {
        "attributes": undefined,
        "children": Array [
          "test",
        ],
        "key": undefined,
        "nodeName": "div",
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Grid should render with gutter 2`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "square": false,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "ind": 1,
          "key": "img",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "img",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "img",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 2,
          "key": "notice",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "notice",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "notice",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 3,
          "key": "arrow-right",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-right",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-right",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 4,
          "key": "arrow-left",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-left",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-left",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 5,
          "key": "check",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "check",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "check",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 6,
          "key": "wrong",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "wrong",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "wrong",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 7,
          "key": "more",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "more",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "more",
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Grid should render with no border 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "border": false,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "ind": 1,
          "key": "img",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "img",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "img",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 2,
          "key": "notice",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "notice",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "notice",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 3,
          "key": "arrow-right",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-right",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-right",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 4,
          "key": "arrow-left",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-left",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-left",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 5,
          "key": "check",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "check",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "check",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 6,
          "key": "wrong",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "wrong",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "wrong",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 7,
          "key": "more",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "more",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "more",
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;

exports[`Grid should render with no center 1`] = `
RenderContext {
  "0": VNode {
    "attributes": Object {
      "center": false,
      "gutter": 20,
    },
    "children": Array [
      VNode {
        "attributes": Object {
          "ind": 1,
          "key": "img",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "img",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "img",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 2,
          "key": "notice",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "notice",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "notice",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 3,
          "key": "arrow-right",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-right",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-right",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 4,
          "key": "arrow-left",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "arrow-left",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "arrow-left",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 5,
          "key": "check",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "check",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "check",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 6,
          "key": "wrong",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "wrong",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "wrong",
        "nodeName": [Function],
      },
      VNode {
        "attributes": Object {
          "ind": 7,
          "key": "more",
        },
        "children": Array [
          VNode {
            "attributes": undefined,
            "children": Array [
              "more",
            ],
            "key": undefined,
            "nodeName": "span",
          },
        ],
        "key": "more",
        "nodeName": [Function],
      },
    ],
    "key": undefined,
    "nodeName": [Function],
  },
  "length": 1,
}
`;
